[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.3.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "=0.3.3", default-features = true }
rand_core = "0.6"
ff = "0.10"
group = { version = "0.10", features = ["tests"] }
pairing_lib = { version = "0.20", package = "pairing" }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.2.1"

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = []
portable = ["blst/portable"]

